# Caffemodel-Parser

./: CMakeLists.txt  caffe.pb.cc  caffe.pb.h  generate_caffe_pb_cc.bat  main.cpp  readme.md  readme.txt
CNN_example/: LeNet.cpp  LeNet.h  main.cpp
